Novos modelos e repositories. Lista dos contratos na tela principal. Refatoração do codigo de upload. - New models and repositories. List of contracts at home page. Refactoring the upload code.

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -28,6 +28,8 @@
 		}
 		.logo-size {
 			font-size: 1.5rem;
+			text-decoration:none;
+			color: #FFF;
 		}
 		.footer-container {
 			background-color: gray;
@@ -51,16 +53,9 @@
 			</button>
 		</div>
 		<div class="p-2 bd-highlight">
-			<span class="logo-font logo-size">gestão de Contratos </span>
+			<a class="logo-font logo-size" href="/">gestão de Contratos</a>
 		</div>
-		<div class="p-2 bd-highlight">
-			<select class="logo-font form-select" aria-label="Default select example">
-			  <option selected>Escolha uma Unidade:</option>
-			  <option value="1">REGOVI-BI</option>
-			  <option value="2">GIGOV-GO</option>
-			  <option value="3">Three</option>
-			</select>
-		</div>
+		
 		<div class="ms-auto p-2 bd-highlight mt-2">
 			<span class="p-2">login</span>
 		</div>
@@ -80,7 +75,7 @@
 			</div>
 			<div class="list-group">
 			  <span class="list-group-item list-group-item-action active" aria-current="true">Listar Contratos</span>
-			  <a href="#" class="list-group-item list-group-item-action">Todos</a>
+			  <a href="/contratos/todos" class="list-group-item list-group-item-action">Todos</a>
 			  <a href="#" class="list-group-item list-group-item-action">Por unidade</a>
 			  <a href="#" class="list-group-item list-group-item-action">Por Tomador</a>
 			</div>
