--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,47 @@
 	<div class="container">
 		<h1>Bem Vindos!</h1>
 		
+		<div>
+			<br>
+			<div class="row row-cols-1 row-cols-md-2 g-4">
+		  		<div class="col">
+					<div class="card">
+					  <div class="card-header">Paralisadas
+					  	<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">99+</span>
+					  </div>
+					  <div class="card-body">			    
+						<div class="progress">
+						  <div class="progress-bar bg-danger" role="progressbar" th:width="${resumo.percentualParalisadas}" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+						</div>
+					  </div>
+					</div>
+				</div>
+				<div class="col">
+					<div class="card">
+					  <div class="card-header">Paralisadas
+					  	<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">99+</span>
+					  </div>
+					  <div class="card-body">			    
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+						</div>
+					  </div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="card mt-3">
+			  <div class="card-header">Todos os Contratos
+			  	<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" th:text="${resumo.quantidadeTotalContratos}">99+</span>
+			  </div>
+			  <div class="card-body">			    
+				<div class="progress">
+				  <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+				</div>
+			  </div>
+			</div>
+		</div>
+		
 	</div>
 
 	
